<resources>
    <string name="app_name">GalacticCom</string>
    <string name="fcm_channel_name">Galactic Comms</string>
    <string name="me">Me</string>
    <string name="other">Other</string>
    <string name="typing_indicator">%1$s is typing…</string>
    <string name="invalid_recipient">Invalid recipient. Going back…</string>
    <string name="failed_to_load_messages">Failed to load messages.</string>
    <string name="failed_to_send_reply">Failed to send reply.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="message_deleted">Message deleted</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="user_bio_placeholder">This is the user\'s bio.</string>
    <string name="experience_label">Experience: </string>
    <string name="experience_placeholder">1000</string>
    <string name="planetary_system">Planetary System</string>
    <string name="galaxy_label">Galaxy: </string>
    <string name="galaxy_placeholder">…</string>
    <string name="star_label">Star: </string>
    <string name="star_placeholder">…</string>
    <string name="planet_label">Planet: </string>
    <string name="planet_placeholder">…</string>
    <string name="regenerate">Regenerate</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="close">Close</string>
    <string name="profile_image_description">User\'s profile image</string>
    <string name="name_placeholder">Name</string>
    <string name="galaxy_logo_preview_description">Galaxy logo preview</string>
    <string name="broadcast_title">Broadcast</string>
    <string name="cosmos_title">Cosmos</string>
    <string name="transmit_title">Transmit</string>
    <string name="comms_title">Comms</string>
    <string name="system_title">System</string>
    <string name="view_button_text">VIEW</string>
    <string name="intercept_button_text">INTERCEPT</string>
    <string name="delete_button_text">DELETE</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="ok_button_text">OK</string>
    <string name="dialog_title_placeholder">Dialog Title</string>
    <string name="empty_sent_messages">No transmissions sent yet. Send your first message to the cosmos!</string>
    <string name="compose_message_hint">Write your message…</string>
    <string name="send_button_description">Send</string>
    <string name="typing_placeholder">Typing…</string>
    <string name="reply_hint">Write your reply…</string>
    <string name="attach_image_description">Attach image</string>
    <string name="voice_message_description">Record voice message</string>
    <string name="you_are_here">YOU ARE HERE</string>
    <string name="travel_to_this_galaxy">TRAVEL TO THIS GALAXY</string>
    <string name="confirm_travel_title">Confirm Travel</string>
    <string name="travel_confirmation_message">Are you sure you want to travel to a new system? The journey will take %1$d seconds.</string>
    <string name="journey_in_progress_message">A journey is already in progress. You can travel again in approximately %1$d seconds.</string>
    <string name="weekly_travel_limit_message">You have reached your weekly travel limit.</string>
    <string name="travel_button_text">Travel</string>
    <string name="journey_initiated_message">Journey to %1$s initiated!</string>
    <string name="travel_failed_message">Failed to initiate travel. Please try again.</string>
    <string name="user_status_error">Could not verify user status.</string>
    <string name="inhabitants_label">Inhabitants: </string>
    <string name="messages_label">Messages: </string>
    <string name="morphology_label">Morphology: </string>
    <string name="age_label">Age: </string>
    <string name="dimension_label">Dimension: </string>
    <string name="composition_label">Composition: </string>
    <string name="habitable_planets_label">Habitable Planets: </string>
    <string name="non_habitable_planets_label">Non-Habitable Planets: </string>
    <string name="toggle_view_description">Toggle between map and list view</string>
    <string name="empty_home_message">Deep space is quiet…\nSend the first transmission!</string>
    <string name="traveling_status">Traveling…</string>
    <string name="empty_inbox_message">Inbox is empty.\nReply to a public broadcast to start a conversation.</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="go_to_register">Don\'t have an account? Register here.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="login_logo_description">Login screen logo</string>
    <string name="register_title">Register</string>
    <string name="avatar_preview_description">Avatar preview</string>
    <string name="nickname_hint">Nickname</string>
    <string name="choose_planetary_system">Choose your planetary system</string>
    <string name="go_to_login">Already have an account? Login here.</string>
    <string name="settings_profile_header">Profile</string>
    <string name="settings_avatar_label">Avatar:</string>
    <string name="user_avatar_description">User Avatar</string>
    <string name="settings_nickname_label">Nickname:</string>
    <string name="settings_data_placeholder">…</string>
    <string name="edit_nickname_description">Edit Nickname</string>
    <string name="settings_bio_label">Bio:</string>
    <string name="edit_bio_description">Edit Bio</string>
    <string name="view_public_profile_button">View Public Profile</string>
    <string name="settings_planetary_system_header">Planetary System</string>
    <string name="settings_orbit_label">Orbit:</string>
    <string name="find_new_system_button">Find New System</string>
    <string name="application_settings_header">Application Settings</string>
    <string name="receive_notifications_label">Receive Notifications</string>
    <string name="default_to_visual_view_label">Default to Visual View</string>
    <string name="settings_music_label">Background Sound</string>
    <string name="account_header">Account</string>
    <string name="settings_email_label">Email:</string>
    <string name="logout_button">Logout</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="footer_message">Forging cosmic connections since 2025.</string>
    <string name="buy_me_a_coffee_link">Buy me a coffee</string>
    <string name="traveling_galaxy_logo_description">Traveling galaxy logo</string>
    <string name="sender_nickname_placeholder">Sender</string>
    <string name="received_message_placeholder">This is a received message.</string>
    <string name="timestamp_placeholder">5m ago</string>
    <string name="edited_status">Edited</string>
    <string name="avatar_description">Sender avatar</string>
    <string name="mic_icon_description">Microphone icon</string>
    <string name="quoted_gif_description">Quoted GIF</string>
    <string name="chat_image_description">Image in chat</string>
    <string name="chat_gif_description">GIF in chat</string>
    <string name="play_voice_message_description">Play voice message</string>
    <string name="sent_message_placeholder">This is a sent message.</string>
    <string name="galaxy_name_placeholder">Galaxy Name</string>
    <string name="last_message_placeholder">This is the last message of the conversation…</string>
    <string name="interlocutor_name_placeholder">Interlocutor Name</string>
    <string name="conversation_timestamp_placeholder">10m ago</string>
    <string name="delete_conversation_button">DELETE CONVERSATION</string>
    <string name="catastrophe_warning">WARNING: UNSTABLE SIGNAL DETECTED</string>
    <string name="public_message_content_placeholder">Msg: This is a sample message…</string>
    <string name="public_message_sender_placeholder">from: Nickname from GalaxyName</string>
    <string name="arriving_in_placeholder">ARRIVING IN: HH:MM</string>
    <string name="view_button">View</string>
    <string name="message_label">Msg:</string>
    <string name="sent_message_content_placeholder">This is the sent message content…</string>
    <string name="sent_to_galaxy_placeholder">to: GalaxyName</string>
    <string name="view_message_button">VIEW MESSAGE</string>
    <string name="authentication_error">Authentication error. Please sign in again.</string>
    <string name="decryption_failed_placeholder">[Decryption failed]</string>
    <string name="encryption_failed">Encryption failed. Message not sent.</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="type_a_reply">Type a reply...</string>
    <string name="galaxy_logo_description">Galaxy logo</string>
    <string name="back_button_description">Back</string>
    <string name="settings">Settings</string>
    <string name="privacy_header">Privacy and Security</string>
    <string name="blocked_users_button">Blocked Users</string>
    <string name="no_blocked_users">No blocked users found.</string>
    <string name="unblock">Unblock</string>
    <string name="manage_blocked_users_title">Blocked Users</string>
    <string name="show_badges_label">Show Badges</string>
    <string name="show_bio_xp_label">Show Bio and Experience</string>
    <string name="show_planetary_system_label">Show Planetary System</string>
</resources>