<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:title="@string/reply"
        app:iconTint="@color/neon_cyan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:iconTint="@color/neon_cyan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="@color/neon_cyan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:iconTint="@color/neon_cyan"
        app:showAsAction="always" />
</menu>