<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_neon_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/Dialog.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title" />

    <EditText
        android:id="@+id/et_old_password"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_neon_border"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/darker_gray" />

    <EditText
        android:id="@+id/et_new_password"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_neon_border"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/darker_gray" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_neon_border"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_negative_button"
            style="@style/Widget.App.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_button_text" />

        <Button
            android:id="@+id/dialog_positive_button"
            style="@style/Widget.App.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button_text" />
    </LinearLayout>

</LinearLayout>