<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/logotipo"
            app:tint="@color/neon_cyan"
            android:scaleType="centerInside"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/login_logo_description" />

        <TextView
            android:text="@string/login_title"
            android:textSize="34sp"
            android:textColor="@color/neon_cyan"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login"
                android:hint="@string/email_hint"
                android:background="@drawable/edit_text_neon_background"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:hint="@string/password_hint"
                android:background="@drawable/edit_text_neon_background"
                android:inputType="textPassword|textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tv_go_to_register"
            android:text="@string/go_to_register"
            android:textColor="@color/neon_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/neon_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tv_resend_verification"
            android:text="@string/resend_verification_email"
            android:textColor="@color/neon_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
