<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/iv_blocked_user_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_avatar_description" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_blocked_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:textColor="@color/neon_cyan"
        android:textSize="16sp"
        android:text="@string/name_placeholder"/>

    <Button
        android:id="@+id/btn_unblock_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unblock"
        android:textSize="12sp"
        android:minHeight="40dp"/>

</LinearLayout>